fix: block scroll when you was on mobile nav bar

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   font-size: 1.6rem;
   font-weight: 500;
   color: #0e1218;
+  overflow-x: hidden;
 }
 
 .hero-section-container {
